<resources>
    <string name="app_name">EmergencyContactHelper</string>
    <string name="welcome_message">Welcome to Emergency Helper</string>
    <string name="instruction_text">Your emergency contacts will appear here.</string>
    <string name="btn_emergency_call">Emergency Call</string>
    <string name="btn_add_contact">Add Emergency Contact</string>
    <string name="btn_logout">Logout</string>
</resources>